test/ui/tests/packages/faulty-component-paths/two/package.metadata
# TEST fail check

name: test,
version: "0.0.0",

components: [
    {
        type: executable,
        name: epsilon,
        path: "",
    },
],
